# NuMaker-Zephyr-TFLM-KWS

./: CMakeLists.txt  Kconfig  PORTING_NOTES.rst  README.rst  overlay-eth.conf  overlay-tls.conf  overlay-wifi.conf  prj.conf
boards/: numaker_m55m1.overlay
src/: BoardInit.cpp  main.cpp
src/Device/DMICRecord/: DMICRecord.c
src/Device/include/: DMICRecord.h  hyperram_code.h
src/MQTT/: ezmqtt.c
src/MQTT/include/ezmqtt/: certs.h  config.h  ezmqtt.h
src/NPU/: ethosu_cpu_cache.c
src/ml-embedded-evaluation-kit_clone/application_api_common/source/: Model.cc
src/ml-embedded-evaluation-kit_clone/application_api_use_case_kws/include/: KwsProcessing.hpp
src/ml-embedded-evaluation-kit_clone/application_api_use_case_kws/src/: KwsProcessing.cc
src/ml-embedded-evaluation-kit_clone/application_main/include/: BufAttributes.hpp
src/ml-embedded-evaluation-kit_clone/log/include/: log_macros.h
